<resources>
    <string name="app_name">CalculaIMCCL</string>
    <string name="peso">Peso:</string>
    <string name="altura">Altura:</string>
    <string name="imc">IMC</string>
    <string name="etAltura">Altura</string>
    <string name="btCalcular">Calcular</string>
    <string name="etPeso_em_kg">Peso em Kg</string>
    <string name="_0_0">0.0</string>
    <string name="btLimpar">Limpar</string>
    <string name="n_o_pode_calcular_dividido_por_zero">Não pode calcular dividido por Zero</string>
    <string name="bot_o_que_limpa">Botão que limpa</string>
    <string name="campo_deve_ser_preenchido">Campo deve ser preenchido</string>
</resources>