<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/etPeso_em_kg"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPeso"
        />

    <TextView
        android:id="@+id/tvAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/altura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPeso" />
    <EditText
        android:id="@+id/etAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/etAltura"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@+id/tvAltura"
        app:layout_constraintTop_toBottomOf="@+id/etPeso"
        />
        <TextView
            android:id="@+id/tvIMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etAltura"
            app:layout_constraintStart_toStartOf="@+id/tvAltura"
            />
    <TextView
        android:id="@+id/tvResultado"
        android:text="@string/_0_0"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etAltura"
        app:layout_constraintStart_toEndOf="@+id/tvIMC"
        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tvPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado"/>
    <Button
        android:id="@+id/btCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvPeso"
        app:layout_constraintEnd_toStartOf="@+id/btLimpar"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado"
        android:text="@string/btCalcular"
        android:padding="16dp"
        />
    <Button
        android:id="@+id/btLimpar"
        android:text="@string/btLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/btCalcular"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>